Clean up pycache files and update deployment config

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,24 @@
 # 🚀 Zero To Hero - Environment Variables Template
-# Copy this file to .env and fill in your actual values
+# Copy this file to .env and fill in your values
 
-# ============================================
-# 🔐 DJANGO CORE SETTINGS
-# ============================================
-DJANGO_SECRET_KEY=your-super-secret-key-here-change-this-in-production
+# ============== REQUIRED ==============
+# Generate a secure secret key: python -c "import secrets; print(secrets.token_urlsafe(50))"
+DJANGO_SECRET_KEY=your-secret-key-here
+
+# ============== DEPLOYMENT SETTINGS ==============
 DEBUG=False
 USE_SQLITE=False
 
-# ============================================
-# 🗄️ DATABASE (PostgreSQL - Render provides this)
-# ============================================
-# Render automatically sets DATABASE_URL
-# For local development, use these:
-DB_NAME=zerotohero
-DB_USER=zth_user
-DB_PASSWORD=zth_password123
-DB_HOST=localhost
-DB_PORT=5432
+# For Render deployment - will be auto-filled by Render
+RENDER_EXTERNAL_HOSTNAME=your-app-name.onrender.com
 
-# ============================================
-# 📧 EMAIL SETTINGS (Gmail SMTP Example)
-# ============================================
+# For Railway deployment - will be auto-filled by Railway
+# RAILWAY_PUBLIC_DOMAIN=your-app-name.railway.app
+
+# ============== DATABASE (Optional - for PostgreSQL) ==============
+# DATABASE_URL=postgres://username:password@host:5432/dbname
+
+# ============== EMAIL SETTINGS (Optional) ==============
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
@@ -29,20 +26,14 @@ EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
 DEFAULT_FROM_EMAIL=your-email@gmail.com
 
-# ============================================
-# 💳 RAZORPAY PAYMENT GATEWAY
-# ============================================
-RAZORPAY_KEY_ID=rzp_test_your_key_id_here
-RAZORPAY_KEY_SECRET=your_secret_key_here
-RAZORPAY_CURRENCY=INR
+# ============== PAYMENT GATEWAY - RAZORPAY (Optional) ==============
+RAZORPAY_KEY_ID=rzp_test_your_key_here
+RAZORPAY_KEY_SECRET=your_razorpay_secret
 
-# ============================================
-# 📊 GOOGLE ANALYTICS (Optional)
-# ============================================
-GA_TRACKING_ID=G-XXXXXXXXXX
+# ============== PAYMENT GATEWAY - STRIPE (Optional) ==============
+STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
+STRIPE_SECRET_KEY=sk_test_your_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
-# ============================================
-# 🌐 ALLOWED HOSTS (Add your Render URL here)
-# ============================================
-# Example: zerotohero.onrender.com
-RENDER_EXTERNAL_HOSTNAME=your-app-name.onrender.com
+# ============== GOOGLE ANALYTICS (Optional) ==============
+GA_TRACKING_ID=GA-XXXXXXXXX-X
