--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,13 @@
 # Django Project - Free Hosting Setup
 
 services:
+  # PostgreSQL Database
+  - type: pserv
+    name: zerotohero-db
+    runtime: postgresql
+    plan: free
+    ipAllowList: []
+
   # Web Service Configuration
   - type: web
     name: zerotohero
@@ -17,6 +24,12 @@ services:
       - key: DEBUG
         value: "False"
       - key: USE_SQLITE
-        value: "True"
+        value: "False"
       - key: WEB_CONCURRENCY
         value: "4"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: zerotohero-db
+          property: connectionString
+      - key: RENDER_EXTERNAL_HOSTNAME
+        value: zerotohero.onrender.com
